src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Accompany_Name__c</fullName>
        <label>Accompany Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Score__c</fullName>
        <label>CSI Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignCity__c</fullName>
        <label>Campaign City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Type__c</fullName>
        <formula>TEXT(Campaign.Execution_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Execution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Province__c</fullName>
        <label>Campaign Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Province1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Outlet</fullName>
                </value>
                <value>
                    <fullName>Mercedes Call Catalogue</fullName>
                </value>
                <value>
                    <fullName>Mercedes call</fullName>
                </value>
                <value>
                    <fullName>Maybach call</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz School of Excelence</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Owner Hotline</fullName>
                </value>
                <value>
                    <fullName>English Customer Desk</fullName>
                </value>
                <value>
                    <fullName>24 hours Touring Support</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz phone</fullName>
                </value>
                <value>
                    <fullName>Model-Year Reference desk</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>Recall desk</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Letter to Executive</fullName>
                </value>
                <value>
                    <fullName>Response Sheet</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mercedes Magazine Survey</fullName>
                </value>
                <value>
                    <fullName>My Mercedes</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>MB Connection</fullName>
                </value>
                <value>
                    <fullName>Mercedes Me Haneda</fullName>
                </value>
                <value>
                    <fullName>Outbound call</fullName>
                </value>
                <value>
                    <fullName>M-Care</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_SubSource__c</fullName>
        <label>Touch Point Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval_Days__c</fullName>
        <formula>TODAY() - DATEVALUE(Member_Latest_Update_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interval Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Status_History__c</fullName>
        <label>Latest Status History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Status__c</fullName>
        <label>Latest Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_status_Date__c</fullName>
        <label>Latest status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lodgement_Date__c</fullName>
        <label>Lodgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MBTH_Status__c</fullName>
        <label>MBTH Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>To Be Confirmed</fullName>
                </value>
                <value>
                    <fullName>Atttended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
		IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,
		IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Latest_Update_Time__c</fullName>
        <label>Member Latest Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newly_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for check for campaign members from IB that were not invited during the segmentation. This is for target vs actual reporting to filter out newly added campaign members from actual responses.</description>
        <label>Newly Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <formula>Participating_Dealer_Package__r.Campaign_Package__r.Package_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Participating_Dealer_Package__r.Campaign_Package__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_Date__c</fullName>
        <label>Participate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer_Name__c</fullName>
        <formula>Participating_Dealer_Package__r.Dealer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participating Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participating Dealer/Package</label>
        <referenceTo>Participating_Dealer__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Notes__c</fullName>
        <label>Registration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSI_Score__c</fullName>
        <label>SSI Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Campaign_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Campaign Partner</label>
        <referenceTo>Campaign_Partner__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Case_ID__c</fullName>
        <label>Vehicle/Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>formula_num__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Sent&quot;) , 1, 0)</formula>
        <label>formula(num)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>